fix collections list crash and a small layout bug in dublin core display

--- a/telemeta/htdocs/css/telemeta.css
+++ b/telemeta/htdocs/css/telemeta.css
@@ -396,6 +396,7 @@ dl dd {
 }
 dl dt {
     float: left;
+    clear: left;
 }
 
 dl.listing dt {
